deploy/digitalocean/k8s/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomacbot-api
  namespace: gomacbot
  labels:
    app: gomacbot-api
spec:
  selector:
    app: gomacbot-api
    deploy-slot: blue
  ports:
    - port: 80
      targetPort: 8080
      name: http
