deploy/digitalocean/k8s/service-slots.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomacbot-api-blue
  namespace: gomacbot
spec:
  selector:
    app: gomacbot-api
    deploy-slot: blue
  ports:
    - port: 80
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: gomacbot-api-green
  namespace: gomacbot
spec:
  selector:
    app: gomacbot-api
    deploy-slot: green
  ports:
    - port: 80
      targetPort: 8080
      name: http
